Fixed spacing for results home

--- a/Frontend/src/Components/ResultsHome/ResultsHome.css
+++ b/Frontend/src/Components/ResultsHome/ResultsHome.css
@@ -11,12 +11,8 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    padding: 0 1rem 2rem;
     margin: auto;
-    max-width: 70rem;
-    min-width: 65rem;
-    overflow: hidden;
-    flex-wrap: wrap;
+    width: 70rem;
   }
 
 
@@ -76,7 +72,7 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
-    padding: 0 20px;
+    width: 70rem;
 }
 
 .content-row {
@@ -85,6 +81,8 @@
     gap: 20px;
     padding: 30px;
     border-radius: 30px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
 }
 
 /* Use grid for even spacing */
